@@ -31,6 +31,15 @@ name|java
 operator|.
 name|util
 operator|.
+name|ArrayList
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Collection
 import|;
 end_import
@@ -321,14 +330,14 @@ name|fieldMatch
 operator|=
 name|fieldMatch
 expr_stmt|;
-name|Set
+name|List
 argument_list|<
 name|Query
 argument_list|>
 name|flatQueries
 init|=
 operator|new
-name|HashSet
+name|ArrayList
 argument_list|<
 name|Query
 argument_list|>
@@ -752,14 +761,14 @@ argument_list|>
 name|flatQueries
 parameter_list|)
 block|{
-name|Set
+name|List
 argument_list|<
 name|Query
 argument_list|>
 name|expandQueries
 init|=
 operator|new
-name|HashSet
+name|ArrayList
 argument_list|<
 name|Query
 argument_list|>
